# bats

./: .gitignore  Cargo.toml  README.md  README.org  bats.scm  main.scm  tasks.org
.github/workflows/: test.yml  testing.yml
assets/: attribution.md
bats/: Cargo.toml
bats-async/: Cargo.toml
bats-async/src/: command.rs  lib.rs  notification.rs
bats-dsp/: Cargo.toml
bats-dsp/benches/: benchmarks.rs
bats-dsp/src/: buffers.rs  envelope.rs  lib.rs  moog_filter.rs  position.rs  sample_rate.rs  sawtooth.rs
bats-lib/: Cargo.toml
bats-lib/benches/: benchmarks.rs
bats-lib/src/: builder.rs  command.rs  lib.rs  metronome.rs  plugin.rs  plugin_factory.rs  position.rs  track.rs  transport.rs
bats-lib/src/plugin/: empty.rs  metadata.rs  toof.rs
bats-ui/: Cargo.toml
bats-ui/src/: bats_state.rs  colors.rs  events.rs  frame_counter.rs  lib.rs  menu.rs  param.rs  plugin_factory.rs  selection.rs  selector.rs  text.rs
bats/src/: args.rs  bats.rs  ipc.rs  jack_adapter.rs  lib.rs  main.rs  scheme_adapter.rs  scheme_lib.rs  state.rs  track.rs
bmidi/: Cargo.toml
bmidi/benches/: benchmarks.rs
bmidi/src/: byte.rs  cc.rs  error.rs  lib.rs  midi_message.rs  note.rs
flashkick/: Cargo.toml
flashkick/src/: lib.rs  scm.rs
src/: bats.rs  flashkick.rs  jack_adapter.rs  main.rs  plugins.rs  process_handler.rs  processor.rs  readline.rs  remote_executor.rs  sample.rs  scheme_adapter.rs  simian.rs  track.rs
src/plugins/: lv2.rs  plugin_trait.rs  sampler.rs
tests/: test.scm
