[package]
name = "bats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
hound = "3.5"
jack = "0.11"
livi = "0.7"
log = "0.4"
wmidi = "4.0"

[profile.release]
# Used to print debug symbols for profiling.
debug = true
