[package]
name = "bats-dsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
anyhow = "1.0"
hound = "3.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"], default_features = false }
