[package]
name = "bats-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
arrayvec = "0.7"
bats-dsp = { path = "../bats-dsp" }
wmidi = "4.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"], default_features = false }
