[package]
name = "bats-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
anyhow = "1.0"
arrayvec = { version = "0.7", features = ["serde"] }
bats-dsp = { path = "../bats-dsp" }
bmidi = { path = "../bmidi" }
serde = { version = "1.0", features = ["derive"]}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"], default_features = false }
