[package]
name = "bats-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bats-async = { path = "../bats-async" }
bats-dsp = { path = "../bats-dsp" }
bats-lib = { path = "../bats-lib" }
log = "0.4"
sdl2 = { version = "0.35", features = ["ttf"] }
