[package]
name = "bats-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bats-async = { path = "../bats-async" }
bats-dsp = { path = "../bats-dsp" }
bats-lib = { path = "../bats-lib" }
crossterm = "0.27.0"
log = "0.4"
postcard = { version = "1.0.8", features = ["use-std"] }
ratatui = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
