[package]
name = "bats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Required for profiling with tools like `cargo flamegraph`.
debug = true

[dependencies]
anyhow = "1.0.75"
bats-async = { path = "../bats-async" }
bats-lib = { path = "../bats-lib" }
bats-ui = { path = "../bats-ui" }
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
jack = "0.11"
log = "0.4"
wmidi = "4.0"
